--- a/python_code/recommendation_engine_training.ipynb
+++ b/python_code/recommendation_engine_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4         1              2.45        2.45             N  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "4              N  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "4         1           Coffee     Jamaican Coffee River Sm  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "80"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "45"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "18"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "18            Dark chocolate  Packaged Chocolate"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "(10189, 9)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
        "4      Chocolate Croissant           Bakery                     636"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "9   1004_5383            Latte      1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "1005_0                            0.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,14 +1447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kq/xrn0pwfj7y18dmn_jrw7l7l00000gn/T/ipykernel_58999/1756069047.py:7: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "/var/folders/kq/xrn0pwfj7y18dmn_jrw7l7l00000gn/T/ipykernel_65109/1756069047.py:7: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  my_basket_sets = my_basket.applymap(encode_units)\n"
      ]
     },
@@ -1815,7 +1815,7 @@
        "1009_5183                           1  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
        "4  0.135676      (Chocolate Croissant)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1959,19 +1959,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(Almond Croissant)</td>\n",
-       "      <td>(Cappuccino)</td>\n",
-       "      <td>0.115646</td>\n",
-       "      <td>0.388889</td>\n",
-       "      <td>0.053288</td>\n",
-       "      <td>0.460784</td>\n",
-       "      <td>1.184874</td>\n",
-       "      <td>0.008314</td>\n",
-       "      <td>1.133333</td>\n",
-       "      <td>0.176432</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>(Cappuccino)</td>\n",
        "      <td>(Almond Croissant)</td>\n",
        "      <td>0.388889</td>\n",
@@ -1982,6 +1969,19 @@
        "      <td>0.008314</td>\n",
        "      <td>1.024775</td>\n",
        "      <td>0.255319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(Almond Croissant)</td>\n",
+       "      <td>(Cappuccino)</td>\n",
+       "      <td>0.115646</td>\n",
+       "      <td>0.388889</td>\n",
+       "      <td>0.053288</td>\n",
+       "      <td>0.460784</td>\n",
+       "      <td>1.184874</td>\n",
+       "      <td>0.008314</td>\n",
+       "      <td>1.133333</td>\n",
+       "      <td>0.176432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2011,16 +2011,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(Almond Croissant)</td>\n",
        "      <td>(Latte)</td>\n",
-       "      <td>0.115646</td>\n",
+       "      <td>(Almond Croissant)</td>\n",
        "      <td>0.382086</td>\n",
+       "      <td>0.115646</td>\n",
        "      <td>0.054422</td>\n",
-       "      <td>0.470588</td>\n",
+       "      <td>0.142433</td>\n",
        "      <td>1.231629</td>\n",
        "      <td>0.010235</td>\n",
-       "      <td>1.167171</td>\n",
-       "      <td>0.212660</td>\n",
+       "      <td>1.031236</td>\n",
+       "      <td>0.304358</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2028,28 +2028,28 @@
       ],
       "text/plain": [
        "          antecedents         consequents  antecedent support  \\\n",
-       "0  (Almond Croissant)        (Cappuccino)            0.115646   \n",
-       "1        (Cappuccino)  (Almond Croissant)            0.388889   \n",
+       "0        (Cappuccino)  (Almond Croissant)            0.388889   \n",
+       "1  (Almond Croissant)        (Cappuccino)            0.115646   \n",
        "2    (Dark chocolate)  (Almond Croissant)            0.277022   \n",
        "3  (Almond Croissant)    (Dark chocolate)            0.115646   \n",
-       "4  (Almond Croissant)             (Latte)            0.115646   \n",
+       "4             (Latte)  (Almond Croissant)            0.382086   \n",
        "\n",
        "   consequent support   support  confidence      lift  leverage  conviction  \\\n",
-       "0            0.388889  0.053288    0.460784  1.184874  0.008314    1.133333   \n",
-       "1            0.115646  0.053288    0.137026  1.184874  0.008314    1.024775   \n",
+       "0            0.115646  0.053288    0.137026  1.184874  0.008314    1.024775   \n",
+       "1            0.388889  0.053288    0.460784  1.184874  0.008314    1.133333   \n",
        "2            0.115646  0.057445    0.207367  1.793115  0.025409    1.115717   \n",
        "3            0.277022  0.057445    0.496732  1.793115  0.025409    1.436567   \n",
-       "4            0.382086  0.054422    0.470588  1.231629  0.010235    1.167171   \n",
+       "4            0.115646  0.054422    0.142433  1.231629  0.010235    1.031236   \n",
        "\n",
        "   zhangs_metric  \n",
-       "0       0.176432  \n",
-       "1       0.255319  \n",
+       "0       0.255319  \n",
+       "1       0.176432  \n",
        "2       0.611791  \n",
        "3       0.500152  \n",
-       "4       0.212660  "
+       "4       0.304358  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>70</th>\n",
        "      <td>(Latte)</td>\n",
        "      <td>(Sugar Free Vanilla syrup)</td>\n",
        "      <td>0.382086</td>\n",
@@ -2141,7 +2141,7 @@
        "      <td>0.520509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
+       "      <th>44</th>\n",
        "      <td>(Latte)</td>\n",
        "      <td>(Chocolate syrup)</td>\n",
        "      <td>0.382086</td>\n",
@@ -2154,7 +2154,7 @@
        "      <td>0.485842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
+       "      <th>68</th>\n",
        "      <td>(Latte)</td>\n",
        "      <td>(Hazelnut syrup)</td>\n",
        "      <td>0.382086</td>\n",
@@ -2206,7 +2206,7 @@
        "      <td>0.123300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>(Latte)</td>\n",
        "      <td>(Almond Croissant)</td>\n",
        "      <td>0.382086</td>\n",
@@ -2219,7 +2219,7 @@
        "      <td>0.304358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
+       "      <th>64</th>\n",
        "      <td>(Latte)</td>\n",
        "      <td>(Ginger Biscotti)</td>\n",
        "      <td>0.382086</td>\n",
@@ -2250,43 +2250,43 @@
       ],
       "text/plain": [
        "   antecedents                 consequents  antecedent support  \\\n",
-       "71     (Latte)  (Sugar Free Vanilla syrup)            0.382086   \n",
+       "70     (Latte)  (Sugar Free Vanilla syrup)            0.382086   \n",
        "33     (Latte)              (Carmel syrup)            0.382086   \n",
-       "45     (Latte)           (Chocolate syrup)            0.382086   \n",
-       "69     (Latte)            (Hazelnut syrup)            0.382086   \n",
+       "44     (Latte)           (Chocolate syrup)            0.382086   \n",
+       "68     (Latte)            (Hazelnut syrup)            0.382086   \n",
        "52     (Latte)                 (Croissant)            0.382086   \n",
        "38     (Latte)       (Chocolate Croissant)            0.382086   \n",
        "66     (Latte)              (Ginger Scone)            0.382086   \n",
-       "5      (Latte)          (Almond Croissant)            0.382086   \n",
-       "65     (Latte)           (Ginger Biscotti)            0.382086   \n",
+       "4      (Latte)          (Almond Croissant)            0.382086   \n",
+       "64     (Latte)           (Ginger Biscotti)            0.382086   \n",
        "48     (Latte)           (Cranberry Scone)            0.382086   \n",
        "\n",
        "    consequent support   support  confidence      lift  leverage  conviction  \\\n",
-       "71            0.200302  0.108844    0.284866  1.422182  0.032311    1.118249   \n",
+       "70            0.200302  0.108844    0.284866  1.422182  0.032311    1.118249   \n",
        "33            0.191232  0.107710    0.281899  1.474121  0.034643    1.126260   \n",
-       "45            0.188964  0.103175    0.270030  1.428997  0.030974    1.111053   \n",
-       "69            0.171580  0.101285    0.265084  1.544961  0.035727    1.127231   \n",
+       "44            0.188964  0.103175    0.270030  1.428997  0.030974    1.111053   \n",
+       "68            0.171580  0.101285    0.265084  1.544961  0.035727    1.127231   \n",
        "52            0.114135  0.057067    0.149357  1.308605  0.013458    1.041407   \n",
        "38            0.135676  0.055178    0.144411  1.064381  0.003338    1.010209   \n",
        "66            0.133409  0.055178    0.144411  1.082472  0.004204    1.012860   \n",
-       "5             0.115646  0.054422    0.142433  1.231629  0.010235    1.031236   \n",
-       "65            0.106198  0.054044    0.141444  1.331890  0.013467    1.041053   \n",
+       "4             0.115646  0.054422    0.142433  1.231629  0.010235    1.031236   \n",
+       "64            0.106198  0.054044    0.141444  1.331890  0.013467    1.041053   \n",
        "48            0.116024  0.051398    0.134520  1.159416  0.007067    1.021371   \n",
        "\n",
        "    zhangs_metric  \n",
-       "71       0.480415  \n",
+       "70       0.480415  \n",
        "33       0.520509  \n",
-       "45       0.485842  \n",
-       "69       0.570848  \n",
+       "44       0.485842  \n",
+       "68       0.570848  \n",
        "52       0.381651  \n",
        "38       0.097889  \n",
        "66       0.123300  \n",
-       "5        0.304358  \n",
-       "65       0.403272  \n",
+       "4        0.304358  \n",
+       "64       0.403272  \n",
        "48       0.222518  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,23 +2366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Almond Croissant': [{'product': 'Dark chocolate',\n",
-      "                       'product_category': 'Packaged Chocolate',\n",
-      "                       'confidence': 0.4967320261437908},\n",
-      "                      {'product': 'Latte',\n",
-      "                       'product_category': 'Coffee',\n",
-      "                       'confidence': 0.47058823529411764},\n",
-      "                      {'product': 'Cappuccino',\n",
-      "                       'product_category': 'Coffee',\n",
-      "                       'confidence': 0.46078431372549017}],\n",
-      " 'Cappuccino': [{'product': 'Sugar Free Vanilla syrup',\n",
+      "{'Cappuccino': [{'product': 'Sugar Free Vanilla syrup',\n",
       "                 'product_category': 'Flavours',\n",
       "                 'confidence': 0.29057337220602525},\n",
       "                {'product': 'Chocolate syrup',\n",
@@ -2418,6 +2409,15 @@
       "                {'product': 'Cranberry Scone',\n",
       "                 'product_category': 'Bakery',\n",
       "                 'confidence': 0.13508260447035958}],\n",
+      " 'Almond Croissant': [{'product': 'Dark chocolate',\n",
+      "                       'product_category': 'Packaged Chocolate',\n",
+      "                       'confidence': 0.4967320261437908},\n",
+      "                      {'product': 'Latte',\n",
+      "                       'product_category': 'Coffee',\n",
+      "                       'confidence': 0.47058823529411764},\n",
+      "                      {'product': 'Cappuccino',\n",
+      "                       'product_category': 'Coffee',\n",
+      "                       'confidence': 0.46078431372549017}],\n",
       " 'Dark chocolate': [{'product': 'Espresso shot',\n",
       "                     'product_category': 'Coffee',\n",
       "                     'confidence': 0.22100954979536153},\n",
@@ -2606,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
