--- a/python_code/firebase_uploader.ipynb
+++ b/python_code/firebase_uploader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,31 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<firebase_admin.App at 0x13157c050>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cred = credentials.Certificate(service_account_info)\n",
-    "firebase_admin.initialize_app(cred,{\n",
-    "    'storageBucket': 'thecozybean-app.firebasestorage.app',\n",
-    "     'databaseURL': 'https://thecozybean-app-default-rtdb.firebaseio.com/'\n",
-    "})"
+    "import firebase_admin\n",
+    "from firebase_admin import credentials\n",
+    "\n",
+    "if not firebase_admin._apps:\n",
+    "    cred = credentials.Certificate(service_account_info)\n",
+    "    firebase_admin.initialize_app(cred, {\n",
+    "        'storageBucket': 'thecozybean-app.firebasestorage.app',\n",
+    "        'databaseURL': 'https://thecozybean-app-default-rtdb.firebaseio.com'\n",
+    "    })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +184,7 @@
        "1  SavoryScone.webp  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +219,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>description</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>price</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>image_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cappuccino</td>\n",
+       "      <td>Coffee</td>\n",
+       "      <td>A rich and creamy cappuccino made with freshly...</td>\n",
+       "      <td>[Espresso, Steamed Milk, Milk Foam]</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>cappuccino.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumbo Savory Scone</td>\n",
+       "      <td>Bakery</td>\n",
+       "      <td>Deliciously flaky and buttery, this jumbo savo...</td>\n",
+       "      <td>[Flour, Butter, Cheese, Herbs, Baking Powder, ...</td>\n",
+       "      <td>329.6</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>SavoryScone.webp</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 name category  \\\n",
+       "0          Cappuccino   Coffee   \n",
+       "1  Jumbo Savory Scone   Bakery   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  A rich and creamy cappuccino made with freshly...   \n",
+       "1  Deliciously flaky and buttery, this jumbo savo...   \n",
+       "\n",
+       "                                         ingredients  price  rating  \\\n",
+       "0                [Espresso, Steamed Milk, Milk Foam]  189.0     4.7   \n",
+       "1  [Flour, Butter, Cheese, Herbs, Baking Powder, ...  329.6     4.3   \n",
+       "\n",
+       "         image_path  \n",
+       "0    cappuccino.jpg  \n",
+       "1  SavoryScone.webp  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -262,8 +335,8 @@
     }
    ],
    "source": [
-    "for index, row in df.iterrows():\n",
-    "    print(index, row['name'])\n",
+    "for index,row in df.iterrows():\n",
+    "    print(index,row['name'])\n",
     "    \n",
     "    image_path = os.path.join(image_folder_path,row['image_path'])\n",
     "    \n",
